Split up/refactor a decent chunk of editor.cpp and editorui.cpp

--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -166,12 +166,16 @@
     <ClInclude Include="src\patches\CKSSE\BSPointerHandleManager.h" />
     <ClInclude Include="src\patches\CKSSE\BSRenderPass_CK.h" />
     <ClInclude Include="src\patches\CKSSE\BSShaderResourceManager_CK.h" />
+    <ClInclude Include="src\patches\CKSSE\CellViewWindow.h" />
     <ClInclude Include="src\patches\CKSSE\Editor.h" />
     <ClInclude Include="src\patches\CKSSE\EditorUI.h" />
     <ClInclude Include="src\patches\CKSSE\EditorUIDarkMode.h" />
+    <ClInclude Include="src\patches\CKSSE\EditorUIDialogs.h" />
     <ClInclude Include="src\patches\CKSSE\Experimental.h" />
     <ClInclude Include="src\patches\CKSSE\LogWindow.h" />
+    <ClInclude Include="src\patches\CKSSE\MainWindow.h" />
     <ClInclude Include="src\patches\CKSSE\NavMesh.h" />
+    <ClInclude Include="src\patches\CKSSE\ObjectWindow.h" />
     <ClInclude Include="src\patches\offsets.h" />
     <ClInclude Include="src\patches\CKSSE\TESFile_CK.h" />
     <ClInclude Include="src\patches\CKSSE\TESForm_CK.h" />
@@ -284,8 +288,12 @@
     <ClCompile Include="src\patches\CKSSE\BSPointerHandleManager.cpp" />
     <ClCompile Include="src\patches\CKSSE\BSRenderPass_CK.cpp" />
     <ClCompile Include="src\patches\CKSSE\BSShaderResourceManager_CK.cpp" />
+    <ClCompile Include="src\patches\CKSSE\CellViewWindow.cpp" />
     <ClCompile Include="src\patches\CKSSE\EditorUIDarkMode.cpp" />
+    <ClCompile Include="src\patches\CKSSE\EditorUIDialogs.cpp" />
     <ClCompile Include="src\patches\CKSSE\LogWindow.cpp" />
+    <ClCompile Include="src\patches\CKSSE\MainWindow.cpp" />
+    <ClCompile Include="src\patches\CKSSE\ObjectWindow.cpp" />
     <ClCompile Include="src\patches\offsets.cpp" />
     <ClCompile Include="src\patches\CKSSE\TESFile_CK.cpp" />
     <ClCompile Include="src\patches\TES\BSGraphics\BSGraphicsRenderer.cpp" />
