CKSSE: Add another blacklisted warning

--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -327,3 +327,4 @@ W164=QUESTS: Could not find previous info (0202BA23) for TopicInfo (0202BA24) in
 W165=QUESTS: Could not find previous info (02035BFE) for TopicInfo (02035BFF) in Topic "" (0203208D).
 W166=DEFAULT: Setting key 'sControlsDefinitionFile' already used in list.\nSetting keys must be unique.\n
 W167=DEFAULT: Setting key 'fMaxDistanceMoved:Pathfinding' already used in list.\nSetting keys must be unique.\n
+W168=MASTERFILE: Did not find matching NavMeshInfo for NavMesh ID 00106EAA in cell Wilderness, Creating a temporary one
