--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -6,6 +6,7 @@
 [CreationKit]
 IOPatch=false                       ; [Experimental] File load optimizations
 UIHotkeys=false                     ; [Experimental] Allow rebinding certain window hotkeys. See [CreationKit_Hotkeys] section.
+AllowMultipleMasters=true           ; [Experimental] Alias for the CreationKit.ini option "bAllowMultipleMasterLoads". It's provided here for convenience.
 
 GenerateCrashdumps=true             ; Generate a dump in the game folder when the CK crashes
 SteamPatch=true                     ; Prevent Steam from saying you're ingame while the CK is open
