CKSSE: Add experimental option for the "Select Enable State Parent" workaround

--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -7,6 +7,7 @@
 IOPatch=false                       ; [Experimental] File load optimizations
 UIHotkeys=false                     ; [Experimental] Allow rebinding certain window hotkeys. See [CreationKit_Hotkeys] section.
 AllowMultipleMasters=true           ; [Experimental] Alias for the CreationKit.ini option "bAllowMultipleMasterLoads". It's provided here for convenience.
+SelectEnableStateParentFix=false    ; [Experimental] Workaround for "Select Enable State Parent" selecting objects outside of the current cell or worldspace
 
 GenerateCrashdumps=true             ; Generate a dump in the game folder when the CK crashes
 SteamPatch=true                     ; Prevent Steam from saying you're ingame while the CK is open
