CKSSE: Allow user to specify initial log window x/y & optionally hide it by default

--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -33,8 +33,10 @@ DisableExportNIF=false              ; Prevent facegen geometry export
 TintMaskResolution=512              ; Sets NxN resolution when exporting textures
 
 [CreationKit_Log]
-Width=1024                          ; Initial log window width
-Height=480                          ; Initial log window height
+X=64                                ; Initial log window X coordinate
+Y=64                                ; Initial log window Y coordinate
+Width=1024                          ; Initial log window width. Set to 0 to hide the log.
+Height=480                          ; Initial log window height. Set to 0 to hide the log.
 Font=Consolas                       ; Any installed system font
 FontSize=10                         ; Size in points
 FontWeight=400                      ; Light (300), Regular (400), Medium (500), Bold (700)
