--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -10,6 +10,7 @@ EnableStateParentWorkaround=false   ; [Experimental] Workaround for "Select Enab
 RefLinkGeometryHangWorkaround=false ; [Experimental] Workaround for bookshelves or "Select Enable State Parent" causing the CK to hang. Ref link lines will no longer be visible.
 VersionControlMergeWorkaround=false ; [Experimental] Workaround for version control not allowing merges with more than 2 masters present. Do NOT use this for anything else.
 
+Unicode=false             	    ; Translates UTF8 to ANSI when opening the plugin and back when saving. Need file CreationKitUnicodePlugin.dll to root folder.
 GenerateCrashdumps=true             ; Generate a dump in the game folder when the CK crashes
 SteamPatch=true                     ; Prevent Steam from saying you're ingame while the CK is open
 NavMeshPseudoDelete=false           ; Remove a triangle from a navmesh without deleting it
