--- a/skyrim64_test/skyrim64_test.vcxproj.filters
+++ b/skyrim64_test/skyrim64_test.vcxproj.filters
@@ -518,6 +518,9 @@
     <ClInclude Include="src\patches\CKSSE\TESWater.h">
       <Filter>Header Files\[EditorAPI]</Filter>
     </ClInclude>
+    <ClInclude Include="src\patches\CKSSE\TES_CK.h">
+      <Filter>Header Files\[EditorAPI]</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\dllmain.cpp">
@@ -878,6 +881,9 @@
       <Filter>Source Files\[EditorAPI]</Filter>
     </ClCompile>
     <ClCompile Include="src\patches\CKSSE\TESForm_CK.cpp">
+      <Filter>Source Files\[EditorAPI]</Filter>
+    </ClCompile>
+    <ClCompile Include="src\patches\CKSSE\TES_CK.cpp">
       <Filter>Source Files\[EditorAPI]</Filter>
     </ClCompile>
   </ItemGroup>
