--- a/skyrim64_test/skyrim64_test.vcxproj.filters
+++ b/skyrim64_test/skyrim64_test.vcxproj.filters
@@ -886,6 +886,9 @@
     <ClCompile Include="src\patches\CKSSE\TES_CK.cpp">
       <Filter>Source Files\[EditorAPI]</Filter>
     </ClCompile>
+    <ClCompile Include="src\patches\CKSSE\DisableENB_CK.cpp">
+      <Filter>Source Files\patches</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\patches\rendering\d3d11_tls_patchlist.inl">
