--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -16,16 +16,16 @@ Unicode=false             	    ; Translates UTF8 to ANSI when opening the plugin
 GenerateCrashdumps=true             ; Generate a dump in the game folder when the CK crashes
 SteamPatch=true                     ; Prevent Steam from saying you're ingame while the CK is open
 NavMeshPseudoDelete=false           ; Remove a triangle from a navmesh without deleting it
-AllowSaveESM=false                  ; Allow saving master files directly & setting them as the active file in the Data File dialog. This will destroy version control information.
+AllowSaveESM=true                   ; Allow saving master files directly & setting them as the active file in the Data File dialog. This will destroy version control information.
 AllowMasterESP=true                 ; Allow ESP files to act as master files while saving
 SkipTopicInfoValidation=true        ; Speed up initial plugin load by skipping topic info validation
-DisableAssertions=false             ; Remove assertion message popups (not recommended)
+DisableAssertions=true              ; Remove assertion message popups (not recommended)
 UI=true                             ; Replaces the warning window with a less intrusive log window. Also adds "Extensions" menu to the menu bar.
 UIDarkTheme=false                   ; Enable dark theme. Requires a Windows theme with styling (Aero) to be enabled and may cause graphical problems.
-RenderWindow60FPS=false             ; Force render window to always draw at 60 frames per second instead of 16
+RenderWindow60FPS=true              ; Force render window to always draw at 60 frames per second instead of 16
 FaceFXDebugOutput=false             ; Enable verbose logging output when generating LIP files
-DisableWindowGhosting=false         ; Disable "Not Responding" overlay while performing certain tasks
-WarningBlacklist=false              ; In the log, hide specific warnings or errors produced by the vanilla game/DLC ESM files. See [CreationKit_Warnings] section.
+DisableWindowGhosting=true          ; Disable "Not Responding" overlay while performing certain tasks
+WarningBlacklist=true               ; In the log, hide specific warnings or errors produced by the vanilla game/DLC ESM files. See [CreationKit_Warnings] section.
 
 ; 0-Normaly. (UIDarkTheme option not overlapped)
 ; 1-Light.
