--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -10,6 +10,7 @@ EnableStateParentWorkaround=false   ; [Experimental] Workaround for "Select Enab
 RefLinkGeometryHangWorkaround=false ; [Experimental] Workaround for bookshelves or "Select Enable State Parent" causing the CK to hang. Ref link lines will no longer be visible.
 VersionControlMergeWorkaround=false ; [Experimental] Workaround for version control not allowing merges with more than 2 masters present. Do NOT use this for anything else.
 PatchCompactFormID=false            ; [Experimental] A patch that replaces the FormID packaging algorithm for .ESL. After conversion, it is already like .ESL. Be careful, after this operation you cannot open the plugin, there will be problems.
+PatchCompactFormIDForced=false      ; [Experimental] Need PatchCompactFormID. If the FormID is within the start and end indexes, it will still be changed.
 CompactStartFormID=1                ; [Experimental] The default is 0x800, this value can be between 0x1 and 0x800. Attention to specify only in decimal system of calculation.
 
 Unicode=false             	    ; Translates UTF8 to ANSI when opening the plugin and back when saving. Need file CreationKitUnicodePlugin.dll to root folder.
