--- a/skyrim64_test/skyrim64_test.vcxproj.filters
+++ b/skyrim64_test/skyrim64_test.vcxproj.filters
@@ -892,6 +892,9 @@
     <ClCompile Include="src\patches\CKSSE\DisableENB_CK.cpp">
       <Filter>Source Files\patches</Filter>
     </ClCompile>
+    <ClCompile Include="src\profiler_internal.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\patches\rendering\d3d11_tls_patchlist.inl">
@@ -927,5 +930,14 @@
     <Image Include="..\Resources\uncheck.bmp" />
     <Image Include="..\Resources\uncheck_darktheme.bmp" />
     <Image Include="..\Resources\check.bmp" />
+    <Image Include="..\Resources\logo.bmp" />
+    <Image Include="..\resources\bitmap9.bmp" />
+    <Image Include="..\Resources\logo_bethesda_game_studio_m.bmp" />
+    <Image Include="..\Resources\logo_bethesda_game_studio.png" />
+    <Image Include="..\Resources\logo_bethesda_game_studio.ico" />
+    <Image Include="..\Resources\logo_ckfixes.ico" />
+    <Image Include="..\Resources\Bethesda_logo.bmp" />
+    <Image Include="..\Resources\developers.bmp" />
+    <Image Include="..\Resources\logo_new.png" />
   </ItemGroup>
 </Project>
