--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -382,6 +382,7 @@
     <ClCompile Include="src\patches\TES\BSGraphics\BSGraphicsUtility.cpp" />
     <ClCompile Include="src\patches\TES\BSRenderPass.cpp" />
     <ClCompile Include="src\patches\TES\NiMain\NiCollisionUtils.cpp" />
+    <ClCompile Include="src\profiler_internal.cpp" />
     <ClCompile Include="src\UtfStr.cpp" />
     <ClCompile Include="src\winhttp_exports.cpp" />
     <ClCompile Include="src\common.cpp" />
@@ -461,8 +462,17 @@
     <ResourceCompile Include="resource.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="..\Resources\Bethesda_logo.bmp" />
+    <Image Include="..\resources\bitmap9.bmp" />
     <Image Include="..\Resources\check.bmp" />
     <Image Include="..\Resources\check_darktheme.bmp" />
+    <Image Include="..\Resources\developers.bmp" />
+    <Image Include="..\Resources\logo.bmp" />
+    <Image Include="..\Resources\logo_bethesda_game_studio.ico" />
+    <Image Include="..\Resources\logo_bethesda_game_studio.png" />
+    <Image Include="..\Resources\logo_bethesda_game_studio_m.bmp" />
+    <Image Include="..\Resources\logo_ckfixes.ico" />
+    <Image Include="..\Resources\logo_new.png" />
     <Image Include="..\Resources\toolbar.bmp" />
     <Image Include="..\Resources\toolbar_light.bmp" />
     <Image Include="..\Resources\types.bmp" />
