--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -9,9 +9,10 @@ AllowMultipleMasters=true           ; [Experimental] Alias for the CreationKit.i
 EnableStateParentWorkaround=false   ; [Experimental] Workaround for "Select Enable State Parent" selecting objects outside of the current cell or worldspace
 RefLinkGeometryHangWorkaround=false ; [Experimental] Workaround for bookshelves or "Select Enable State Parent" causing the CK to hang. Ref link lines will no longer be visible.
 VersionControlMergeWorkaround=false ; [Experimental] Workaround for version control not allowing merges with more than 2 masters present. Do NOT use this for anything else.
-PatchCompactFormID=false            ; [Experimental] A patch that replaces the FormID packaging algorithm for .ESL. After conversion, it is already like .ESL. Be careful, after this operation you cannot open the plugin, there will be problems.
+PatchCompactFormID=false            ; [Experimental] A patch that replaces the FormID packaging algorithm for .ESL. After conversion, it is already like .ESL.
 PatchCompactFormIDForced=false      ; [Experimental] Need PatchCompactFormID. If the FormID is within the start and end indexes, it will still be changed.
 CompactStartFormID=1                ; [Experimental] The default is 0x800, this value can be between 0x1 and 0x800. Attention to specify only in decimal system of calculation.
+ENBProtect=true                     ; [Experimental] Restores VTable process d3d11.dll, d3d9.dll dxgi.dll libraries from system path.
 
 Unicode=false             	    ; Translates UTF8 to ANSI when opening the plugin and back when saving. Need file CreationKitUnicodePlugin.dll to root folder.
 GenerateCrashdumps=true             ; Generate a dump in the game folder when the CK crashes
@@ -33,6 +34,7 @@ WarningBlacklist=true               ; In the log, hide specific warnings or erro
 ; 2-Gray.
 ; 3-Dark Gray.
 ; 4-Night.
+; 5-Night Blue.
 ; Requires a Windows theme with styling (Aero) to be enabled and may cause graphical problems.
 ; WARN: UIDarkTheme option overlapped		
 UITheme=0
