--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -43,7 +43,9 @@
     <InterproceduralOptimization>true</InterproceduralOptimization>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
-  <ImportGroup Label="ExtensionSettings" />
+  <ImportGroup Label="ExtensionSettings">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\masm.props" />
+  </ImportGroup>
   <ImportGroup Label="Shared">
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -450,6 +452,9 @@
     <ClCompile Include="src\patches\window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <MASM Include="src\patches\CKSSE\TESLandEditorFix_CK.asm">
+      <FileType>Document</FileType>
+    </MASM>
     <None Include="src\patches\rendering\d3d11_codegen_tables.inl" />
     <None Include="src\patches\rendering\d3d11_tls_patchlist.inl" />
     <None Include="src\patches\rendering\d3d11_tls_xreflist.inl" />
@@ -474,5 +479,7 @@
     <Image Include="..\Resources\uncheck_darktheme.bmp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <ImportGroup Label="ExtensionTargets" />
+  <ImportGroup Label="ExtensionTargets">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\masm.targets" />
+  </ImportGroup>
 </Project>
