--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -16,6 +16,7 @@ ENBProtect=true                     ; [Experimental] Restores VTable process d3d
 
 Unicode=false             	    ; Translates UTF8 to ANSI when opening the plugin and back when saving. Need file CreationKitUnicodePlugin.dll to root folder.
 GenerateCrashdumps=true             ; Generate a dump in the game folder when the CK crashes
+OwnArchiveLoader=true               ; Loading mod archives
 SteamPatch=true                     ; Prevent Steam from saying you're ingame while the CK is open
 NavMeshPseudoDelete=false           ; Remove a triangle from a navmesh without deleting it
 AllowSaveESM=true                   ; Allow saving master files directly & setting them as the active file in the Data File dialog. This will destroy version control information.
