--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -12,7 +12,7 @@ VersionControlMergeWorkaround=false ; [Experimental] Workaround for version cont
 PatchCompactFormID=false            ; [Experimental] A patch that replaces the FormID packaging algorithm for .ESL. After conversion, it is already like .ESL.
 PatchCompactFormIDForced=false      ; [Experimental] Need PatchCompactFormID. If the FormID is within the start and end indexes, it will still be changed.
 CompactStartFormID=1                ; [Experimental] The default is 0x800, this value can be between 0x1 and 0x800. Attention to specify only in decimal system of calculation.
-ENBProtect=true                     ; [Experimental] Restores VTable process d3d11.dll, d3d9.dll dxgi.dll libraries from system path.
+ENBProtect=false                    ; [Experimental] Restores VTable process d3d11.dll, d3d9.dll dxgi.dll libraries from system path.
 
 Unicode=false             	    ; Translates UTF8 to ANSI when opening the plugin and back when saving. Need file CreationKitUnicodePlugin.dll to root folder.
 GenerateCrashdumps=true             ; Generate a dump in the game folder when the CK crashes
